--- a/templates/index.html
+++ b/templates/index.html
@@ -32,19 +32,19 @@
 		<section id="instructions">
 			<h2> Planning to Adopt? </h2>
 			<ul>
-				<li>
+				<!-- <li>
 					<img src="/static/site-images/checklist.png">
 					<h3> General Adoption Checklist </h3>
 					<p> A short description of what this page is! </p>
 					<a href="/"> <button class="btn btn-primary"> Learn More </button>  </a>
-				</li>
+				</li> -->
 				<li>
 					<img src="/static/site-images/dog-care.png">
 					<h3> Dog Care Guide </h3>
 					<p> A short description of what this page is! </p>
-					<a href="/"> <button class="btn btn-primary"> Learn More </button>  </a>
+					<a href="/adoptdog"> <button class="btn btn-primary"> Learn More </button>  </a>
 				</li>
-				<li>
+<!-- 				<li>
 					<img src="/static/site-images/cat-care.png">
 					<h3> Cat Care Guide </h3>
 					<p> A short description of what this page is! </p>
@@ -62,11 +62,11 @@
 					<p> A short description of what this page is! </p>
 					<a href="/"> <button class="btn btn-primary"> Learn More </button>  </a>
 				</li>
-				<li>
+ -->				<li>
 					<img src="/static/site-images/reptile-care.png">
 					<h3> Reptile Care Guide </h3>
 					<p> A short description of what this page is! </p>
-					<a href="/"> <button class="btn btn-primary"> Learn More </button> </a>
+					<a href="/axolotl"> <button class="btn btn-primary"> Learn More </button> </a>
 				</li>
 			</ul>
 		</section>
