--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
 					<img src="/static/site-images/dog-care.png">
 					<h3> Dog Care Guide </h3>
 					<p> A short description of what this page is! </p>
-					<a href="/"> <button class="btn btn-primary"> Learn More </button>  </a>
+					<a href="{{url_for('adoptdog')}}"> <button class="btn btn-primary"> Learn More </button>  </a>
 				</li>
 				<li>
 					<img src="/static/site-images/cat-care.png">
@@ -66,7 +66,7 @@
 					<img src="/static/site-images/reptile-care.png">
 					<h3> Reptile Care Guide </h3>
 					<p> A short description of what this page is! </p>
-					<a href="/"> <button class="btn btn-primary"> Learn More </button> </a>
+					<a href="{{url_for('axolotl')}}"> <button class="btn btn-primary"> Learn More </button> </a>
 				</li>
 			</ul>
 		</section>
