--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,9 @@
 {{ super() }}
     <link rel="shortcut icon" href="/walter.ico" type="image/x-icon">
     <link rel="icon" href="/walter.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css" />
+    <!-- <link rel="stylesheet" href="css/style.css" /> -->
 {% endblock %}
 
 
